@@ -1,6 +1,5 @@
 <?php
 require_once(dirname(__FILE__)."/config.php");
-require_once(WWW_DIR."lib/framework/db.php");
 require_once(WWW_DIR."lib/category.php");
 require_once(WWW_DIR."lib/groups.php");
 require_once(WWW_DIR."lib/nfo.php");
@@ -13,23 +12,33 @@ function preName()
 {
 	$db = new DB();
 	$consoletools = new ConsoleTools();
-	$counter=0;
-	if($res = $db->queryDirect("select ID, searchname from releases where searchname REGEXP '[a-fA-F0-9]{32}' and dehashstatus = 0"))
+	$counter = 0;
+	$loops = 1;
+	$reset = 0;
+	//$db->queryDirect("update releases set dehashstatus = -1 where dehashstatus = 0 and searchname REGEXP '[a-fA-F0-9]{32}'");
+
+	$db->query("update releases set dehashstatus = -1 where dehashstatus = 0 and searchname REGEXP '[a-fA-F0-9]{32}'");
+	if($res = $db->queryDirect("select ID, searchname from releases where dehashstatus between -6 and -1 and searchname REGEXP '[a-fA-F0-9]{32}'"))
 	{
 		foreach ($res as $row)
 		{
-			if (preg_match('/^([0-9a-f]+?) .+?/', $row['searchname'], $match))
+			$success = false;
+			if (preg_match('/([0-9a-fA-F]{32})/', $row['searchname'], $match))
 			{
 				if($res1 = $db->queryOneRow(sprintf("select title from predb where md5 = %s", $db->escapeString($match[1]))))
 				{
-					$db->query(sprintf("update releases set dehashstatus = 1, searchname = %s where ID = %d", $db->escapeString($res1['title']), $row['ID']));
+					$db->query(sprintf("update releases set dehashstatus = 1, relnamestatus = 6, searchname = %s where ID = %d", $db->escapeString($res1['title']), $row['ID']));
 					if ($db->getAffectedRows() >= 1)
 					{
-						$consoletools->overWrite("Renaming hashed releases:".$consoletools->percentString($counter++,mysqli_num_rows($res)));
+						$success = true;
+						$counter++;
 					}
 				}
 			}
+			if ($success == false)
+				$db->query(sprintf("update releases set dehashstatus = dehashstatus - 1 where ID = %d", $row['ID']));
+			$consoletools->overWrite("Renaming hashed releases:".$consoletools->percentString($loops++,mysqli_num_rows($res)));
 		}
 	}
-	echo "\n";
+	echo "\n".$counter. " release(s) names changed.\n";
 }
