@@ -60,12 +60,12 @@ else:
 datas = []
 maxtries = -1
 
-if sys.argv[1] == "additional" and (posttorun == 1 or posttorun == 3):
+if sys.argv[1] == "additional":
 	while len(datas) < run_threads * ppperrun and maxtries >= -6:
 		cur.execute("select r.ID, r.guid, r.name, c.disablepreview, r.size, r.groupID, r.nfostatus from releases r left join category c on c.ID = r.categoryID where %s r.passwordstatus between %d and -1 and (r.haspreview = -1 and c.disablepreview = 0) and nzbstatus = 1 order by r.postdate desc limit %d" % (maxsize, maxtries, run_threads * ppperrun))
 		datas = cur.fetchall()
 		maxtries = maxtries - 1
-elif sys.argv[1] == "nfo" and (posttorun == 2 or posttorun == 3):
+elif sys.argv[1] == "nfo":
 	while len(datas) < run_threads * nfoperrun and maxtries >= -6:
 		cur.execute("SELECT r.ID, r.guid, r.groupID, r.name FROM releases r WHERE %s r.nfostatus between %d and -1 and r.nzbstatus = 1 order by r.postdate desc limit %d" % (maxsize, maxtries, run_threads * nfoperrun))
 		datas = cur.fetchall()
