@@ -96,9 +96,9 @@ if (!empty($argc) || $page->isPostBack() )
 		{
 			$isBlackListed = FALSE;
 			$importfailed = false;
-			$nzb = file_get_contents($nzbFile);
+			$nzba = file_get_contents($nzbFile);
 
-			$xml = @simplexml_load_string($nzb);
+			$xml = @simplexml_load_string($nzba);
 			if (!$xml || strtolower($xml->getName()) != 'nzb')
 			{
 				continue;
@@ -254,7 +254,7 @@ if (!empty($argc) || $page->isPostBack() )
 				$subject = utf8_encode(trim($partless));
 				if($relID = $db->queryInsert(sprintf("insert into releases (name, searchname, totalpart, groupID, adddate, guid, rageID, postdate, fromname, size, passwordstatus, haspreview, categoryID, nfostatus, nzbstatus) values (%s, %s, %d, %d, now(), %s, -1, %s, %s, %s, %d, -1, 7010, -1, 1)", $db->escapeString($subject), $db->escapeString($cleanerName), $totalFiles, $groupID, $db->escapeString($relguid), $db->escapeString($postdate['0']), $db->escapeString($postername['0']), $db->escapeString($totalsize), ($page->site->checkpasswordedrar == "1" ? -1 : 0))));
 				{
-					if($nzb->copyNZBforImport($relguid, $nzbFile))
+					if($nzb->copyNZBforImport($relguid, $nzba))
 					{
 
 						$message = "Imported NZB successfully. ".
